--- a/package.json
+++ b/package.json
@@ -5,28 +5,40 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "clean": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean" ,
+    "clean": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean",
     "web-build-dev": "./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --port 3001 --inline --hot --colors",
-    "web-build-prod": "./node_modules/.bin/webpack -p --config ./web/webpack.config.js"
+    "web-build-prod": "./node_modules/.bin/webpack -p --config ./web/webpack.config.js",
+    "watchman-clear": "watchman watch-del-all",
+    "preinstall": "node preinstall.js"
   },
   "dependencies": {
     "react": "^16.6.3",
+    "react-art": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-native": "0.55.4",
-    "react-native-web": "^0.9.9"
+    "react-native-navigation": "^2.1.3-patch.2",
+    "react-native-web": "^0.9.9",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "4.8.3",
+    "redux-thunk": "^2.3.0",
+    "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
     "babel": "6.23.0",
     "babel-core": "6.26.0",
+    "babel-jest": "23.6.0",
     "babel-loader": "7.1.4",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-react-native-web": "^0.9.9",
     "babel-plugin-react-transform": "3.0.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "babel-jest": "23.6.0",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-react-native-web": "^0.9.9",
     "babel-preset-react-native": "4.0.1",
+    "babel-preset-stage-0": "6.24.1",
     "jest": "23.6.0",
     "react-test-renderer": "16.3.1",
     "url-loader": "^1.1.2",
