--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-native": "0.55.4",
+    "react-native-navigation": "^2.1.3-patch.2",
     "react-native-web": "^0.9.9",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "4.8.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
     "babel": "6.23.0",
