--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
   },
   "dependencies": {
     "react": "^16.6.3",
+    "react-art": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-native": "0.55.4",
-    "react-native-web": "^0.9.9"
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-linear-gradient": "^2.5.3",
+    "react-native-web": "^0.9.9",
+    "react-native-web-linear-gradient": "^1.0.5"
   },
   "devDependencies": {
     "babel": "6.23.0",
     "babel-core": "6.26.0",
+    "babel-jest": "23.6.0",
     "babel-loader": "7.1.4",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-react-native-web": "^0.9.9",
     "babel-plugin-react-transform": "3.0.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "babel-jest": "23.6.0",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-react-native-web": "^0.9.9",
     "babel-preset-react-native": "4.0.1",
+    "babel-preset-stage-0": "6.24.1",
     "jest": "23.6.0",
     "react-test-renderer": "16.3.1",
     "url-loader": "^1.1.2",
