--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^16.6.3",
+    "react-art": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-native": "0.55.4",
     "react-native-navigation": "^2.1.3-patch.2",
