--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web-build-prod": "./node_modules/.bin/webpack -p --config ./web/webpack.config.js"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-art": "^16.6.3",
     "react-dom": "^16.6.3",
