--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,11 +29,23 @@ allprojects {
     }
 }
 ext {
-    buildToolsVersion = "26.0.3"
     buildToolsVersion = "27.0.3"
-    minSdkVersion = 16
     minSdkVersion = 19
     compileSdkVersion = 26
     targetSdkVersion = 26
     supportLibVersion = "26.1.0"
 }
+subprojects { subproject ->
+        afterEvaluate {
+                if ((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
+                        android {
+                                variantFilter { variant ->
+                                        def names = variant.flavors*.name
+                                        if (names.contains("reactNative51") || names.contains("reactNative56")|| names.contains("reactNative57")) {
+                                                setIgnore(true)
+                                            }
+                                    }
+                            }
+                    }
+            }
+    }
