--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-web": "^0.9.9",
     "react-native-web-linear-gradient": "^1.0.5",
     "react-redux": "^6.0.0",
+    "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
