--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "jest",
     "clean": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean",
     "web-build-dev": "./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --port 3001 --inline --hot --colors",
-    "web-build-prod": "npm run cleanWeb && ./node_modules/.bin/webpack -p --config ./web/webpack.config.js",
+    "web-build-prod": "npm run cleanWeb && ./node_modules/.bin/webpack -p --config ./web/webpack.config.js && npm run startWeb",
     "watchman-clear": "watchman watch-del-all",
     "preinstall": "node preinstall.js",
     "cleanWeb": "rm -rf ./dist/bundle.web.js",
@@ -37,7 +37,7 @@
     "rp": "./node_modules/.bin/prettier --write \"**/*.json\" \"**/*.js\" \"!dist/**/*.js\"",
     "precommit": "npm run rp && lint-staged",
     "serve": "./node_modules/.bin/serve -s dist",
-    "startWeb": "./node_modules/.bin/http-server ./dist --cors -a localhost -p 8000"
+    "startWeb": "./node_modules/.bin/http-server ./dist --cors -p 8000"
   },
   "dependencies": {
     "babel-eslint": "^10.0.1",
