--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "lint": "./node_modules/.bin/eslint . --ext .js",
     "rp": "./node_modules/.bin/prettier --write \"**/*.json\" \"**/*.js\" \"!dist/**/*.js\"",
     "precommit": "npm run rp && lint-staged",
-    "serve": "./node_modules/.bin/serve -s dist",
+    "serve": "./node_modules/.bin/serve  -s -C dist -p 4401 ",
     "startWeb": "./node_modules/.bin/http-server ./dist --cors -p 8000"
   },
   "dependencies": {
     "babel-eslint": "^10.0.1",
+    "cors-server": "^1.0.4",
     "http-server": "^0.11.1",
     "lodash": "^4.17.11",
     "react": "^16.6.3",
@@ -60,7 +61,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "serve": "6.5.8"
   },
   "devDependencies": {
     "babel": "6.23.0",
