--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "lint": "./node_modules/.bin/eslint . --ext .js",
     "rp": "./node_modules/.bin/prettier --write \"**/*.json\" \"**/*.js\" \"!dist/**/*.js\"",
     "precommit": "npm run rp && lint-staged",
-    "startWeb": "./node_modules/.bin/http-server ./dist --cors -a localhost -p  4223"
+    "startWeb": "./node_modules/.bin/http-server ./dist --cors -a localhost -p  4223",
+    "android-build": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean && ./gradlew assembleRelease"
   },
   "dependencies": {
     "babel-eslint": "^10.0.1",
