--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "clean": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean",
-    "web-build-dev": "./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --port 3001 --inline --hot --colors  --history-api-fallback",
+    "web-build-dev": "NODE_ENV=development && ./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --port 3001 --inline --hot --colors  --history-api-fallback",
     "web-build-prod": "NODE_ENV=production && npm run cleanWeb && ./node_modules/.bin/webpack -p --config ./web/webpack.config.js && npm run startWeb",
     "watchman-clear": "watchman watch-del-all",
     "preinstall": "node preinstall.js",
