--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,7 +41,7 @@ subprojects { subproject ->
                         android {
                                 variantFilter { variant ->
                                         def names = variant.flavors*.name
-                                        if (names.contains("reactNative51") || names.contains("reactNative56")|| names.contains("reactNative57")) {
+                                        if (names.contains("reactNative51") || names.contains("reactNative56")|| names.contains("reactNative57") || names.contains("reactNative57WixFork")) {
                                                 setIgnore(true)
                                             }
                                     }
