--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-react-native": "4.0.1",
     "babel-preset-stage-0": "6.24.1",
+    "css-loader": "^2.0.2",
     "eslint": "^5.10.0",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.2.1",
@@ -82,6 +83,7 @@
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
     "react-test-renderer": "16.3.1",
+    "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
