--- a/ios/ActNursesportal/Info.plist
+++ b/ios/ActNursesportal/Info.plist
@@ -40,7 +40,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Black.otf</string>
@@ -80,8 +80,6 @@
 		<string>MontserratAlternates-Light.otf</string>
 		<string>MontserratAlternates-SemiBold.otf</string>
 	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
