--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-navigation": "^2.1.3-patch.2",
+    "react-native-splash-screen": "^3.1.1",
     "react-native-web": "^0.9.9",
     "react-native-web-linear-gradient": "^1.0.5",
     "react-redux": "^6.0.0",
