--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "rp": "./node_modules/.bin/prettier --write \"**/*.json\" \"**/*.js\" \"!dist/**/*.js\"",
     "precommit": "npm run rp && lint-staged",
     "startWeb": "./node_modules/.bin/http-server ./dist --cors -a localhost -p  4223",
-    "android-build": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean && ./gradlew assembleRelease",
-    "reset-cache": "watchman watch-del-all && react-native start --reset-cache"
+    "android-build": "npm run android-bundle && watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean && ./gradlew assembleRelease",
+    "reset-cache": "watchman watch-del-all && react-native start --reset-cache",
+    "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "android-install": "adb install /android/app/build/outputs/apk/release/app-release.apk",
+    "android-unintsall": "adb uninstall com.actnursesportal"
   },
   "dependencies": {
     "babel-eslint": "^10.0.1",
