--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "android-build": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean && ./gradlew assembleRelease"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "babel-eslint": "^10.0.1",
     "halogenium": "^2.2.3",
     "http-server": "^0.11.1",
@@ -50,18 +51,24 @@
     "react-native": "0.55.4",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-linear-gradient": "^2.5.3",
-    "react-native-navigation": "^2.1.3-patch.2",
+    "react-native-navigation": "^2.4.0",
+    "react-native-otp-inputs": "^1.0.0",
+    "react-native-redux-toast": "^1.0.3",
     "react-native-web": "^0.9.9",
     "react-native-web-linear-gradient": "^1.0.5",
+    "react-otp-input": "^0.2.1",
     "react-redux": "^6.0.0",
+    "react-redux-toastr": "^7.4.5",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-toast-notifications": "^1.3.1",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "yarn": "^1.12.3"
   },
   "devDependencies": {
     "babel": "6.23.0",
