--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "precommit": "npm run rp && lint-staged",
     "startWeb": "./node_modules/.bin/http-server ./dist --cors -a localhost -p  4223",
     "android-build": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean && ./gradlew assembleRelease",
-    "run-android-release": "react-native run-android --variant=release"
+    "run-android-release": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean && cd .. && react-native run-android --variant=release"
   },
   "dependencies": {
     "add": "^2.0.6",
