--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "react": "^16.6.3",
     "react-art": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-modal": "^3.8.1",
     "react-native": "0.55.4",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-linear-gradient": "^2.5.3",
+    "react-native-modal": "^7.0.2",
     "react-native-navigation": "^2.4.0",
     "react-native-otp-inputs": "^1.0.0",
     "react-native-splash-screen": "^3.1.1",
