--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "halogenium": "^2.2.3",
     "http-server": "^0.11.1",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "react": "^16.6.3",
     "react-art": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -65,6 +66,7 @@
     "react-redux": "^6.0.0",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-table": "^6.8.6",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
