--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "halogenium": "^2.2.3",
     "http-server": "^0.11.1",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "react": "^16.6.3",
     "react-art": "^16.6.3",
     "react-dom": "^16.6.3",
