--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "^2.23.0",
     "react": "^16.6.3",
     "react-art": "^16.6.3",
+    "react-confirm-alert": "^2.0.7",
     "react-dom": "^16.6.3",
     "react-modal": "^3.8.1",
     "react-native": "0.55.4",
