--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "jest": "23.6.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
+    "react-native-web-image-loader": "^0.0.6",
     "react-test-renderer": "16.3.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
