--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "clean": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean",
-    "win-web-build-dev":"./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --inline --hot --colors --port 3001 --history-api-fallback",
+    "win-web-build-dev": "./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --inline --hot --colors --port 3001 --history-api-fallback",
     "web-build-dev": "NODE_ENV=development && ./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --port 3001 --inline --hot --colors  --history-api-fallback",
     "web-build-prod": "NODE_ENV=production && npm run cleanWeb && ./node_modules/.bin/webpack -p --config ./web/webpack.config.js && npm run startWeb",
     "watchman-clear": "watchman watch-del-all",
@@ -45,6 +45,7 @@
     "android-uninstall": "adb uninstall com.actnursesportal"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "halogenium": "^2.2.3",
     "http-server": "^0.11.1",
@@ -63,10 +64,12 @@
     "react-native-modal": "^7.0.2",
     "react-native-navigation": "^2.4.0",
     "react-native-otp-inputs": "^1.0.0",
+    "react-native-pdf": "^5.0.11",
     "react-native-splash-screen": "^3.1.1",
     "react-native-web": "^0.9.9",
     "react-native-web-linear-gradient": "^1.0.5",
     "react-otp-input": "^0.2.1",
+    "react-pdf": "^4.0.2",
     "react-redux": "5.0.7",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
@@ -76,6 +79,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.10.15",
     "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
