pdf Implemented on Android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,8 +153,8 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-pdf')
-    compile project(':rn-fetch-blob')
+    implementation project(':react-native-pdf')
+    implementation project(':rn-fetch-blob')
     implementation project(':react-native-splash-screen')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
