--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "clean": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean",
-    "win-web-build-dev":"./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --inline --hot --colors --port 3001 --history-api-fallback",
+    "win-web-build-dev": "./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --inline --hot --colors --port 3001 --history-api-fallback",
     "web-build-dev": "NODE_ENV=development && ./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --port 3001 --inline --hot --colors  --history-api-fallback",
     "web-build-prod": "NODE_ENV=production && npm run cleanWeb && ./node_modules/.bin/webpack -p --config ./web/webpack.config.js && npm run startWeb",
     "watchman-clear": "watchman watch-del-all",
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "babel-eslint": "^10.0.1",
+    "css-to-react-native-transform": "^1.8.0",
     "halogenium": "^2.2.3",
     "http-server": "^0.11.1",
     "lodash": "^4.17.11",
@@ -62,11 +63,10 @@
     "react-native-linear-gradient": "^2.5.3",
     "react-native-modal": "^7.0.2",
     "react-native-navigation": "^2.4.0",
-    "react-native-otp-inputs": "^1.0.0",
+    "react-native-otp-inputs": "./modified_modules/react-native-otp-inputs",
     "react-native-splash-screen": "^3.1.1",
     "react-native-web": "^0.9.9",
     "react-native-web-linear-gradient": "^1.0.5",
-    "react-otp-input": "^0.2.1",
     "react-redux": "5.0.7",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
