--- a/ios/ActNursesportal.xcodeproj/xcshareddata/xcschemes/ActNursesportal.xcscheme
+++ b/ios/ActNursesportal.xcodeproj/xcshareddata/xcschemes/ActNursesportal.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "83CBBA2D1A601D0E00E9B192"
                BuildableName = "libReact.a"
-               BlueprintName = "React"
+               BlueprintName = "react"
                ReferencedContainer = "container:../node_modules/react-native/React/React.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
