prduction config for web

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,5 +24,5 @@ deploy-dev:
     - ls
     - npm run web-build-prod
     - cd ..
-    - pm2 restart server.js --env= production   --name "ActNursesPortalServer"
+    - pm2 restart ./server/server.js --env= production   --name "ActNursesPortalServer"
     - pm2 logs
