--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "babel": "6.23.0",
