--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,8 @@ build-dev:
     - staging
   script:
     - npm install
+    - ls
+    - npm run web-build-prod
   only:
     - staging
 deploy-dev:
@@ -20,9 +22,5 @@ deploy-dev:
     - staging
   stage: deploy
   script:
-    - npm install
-    - ls
-    - npm run web-build-prod
-   
-    - pm2 restart server/server.js --env= production   --name "ActNursesPortalServer"
+    - pm2 restart server.js --env= production   --name "ActNursesPortalServer"
     - pm2 logs
