--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,5 +22,6 @@ deploy-dev:
     - staging
   stage: deploy
   script:
-    - pm2 restart server.js --env= production   --name "ActNursesPortalServer"
+    - ls
+    - pm2 start server.js --env= production   --name "ActNursesPortalServer"
     - pm2 logs
