--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,5 +23,5 @@ deploy-dev:
   stage: deploy
   script:
     - ls
-    - pm2 start server.js --env=production   --name "ActNursesPortalServer"
+    - pm2 restart server.js --env=production   --name "ActNursesPortalServer"
     - pm2 logs
