--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,4 +23,5 @@ deploy-dev:
   script:
     - ls
     - pwd
+    - cd /home/gitlab-runner/builds/a00ff1e2/0/SDM/actproject/
     - pm2 restart server.js --env=production   --name "ActNursesPortalServer"
