--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.10.15",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "babel": "6.23.0",
