changes in design

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "clean": "watchman watch-del-all && cd android && ./gradlew --stop && ./gradlew clean",
     "win-web-build-dev": "./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --inline --hot --colors --port 3001 --history-api-fallback",
     "web-build-dev": "NODE_ENV=development && ./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --port 3001 --inline --hot --colors  --history-api-fallback",
-    "web-build-prod": "NODE_ENV=production && npm run cleanWeb && ./node_modules/.bin/webpack -p --config ./web/webpack.config.js && npm run startWeb",
+    "web-build-prod": "NODE_ENV=production && npm run cleanWeb && ./node_modules/.bin/webpack -p --config ./web/webpack.config.js",
     "watchman-clear": "watchman watch-del-all",
     "preinstall": "node preinstall.js",
-    "cleanWeb": "rm -rf ./dist/bundle.web.js",
+    "cleanWeb": "rm -rf ./dist/bundle.web.js && rm -rf ./dist/style.css && cp src/assets/styles/style.css dist/style.css",
     "lint": "./node_modules/.bin/eslint . --ext .js",
     "rp": "./node_modules/.bin/prettier --write \"**/*.json\" \"**/*.js\" \"!dist/**/*.js\"",
     "precommit": "npm run rp && lint-staged",
