--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-interactable')
     implementation project(':react-native-pdf')
     implementation project(':rn-fetch-blob')
     implementation project(':react-native-splash-screen')
