--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-modal": "^3.8.1",
     "react-native": "0.55.4",
     "react-native-geocoding": "^0.3.0",
+    "react-native-interactable": "^0.1.10",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-material-dropdown": "^0.11.1",
@@ -71,7 +72,7 @@
     "react-native-pdf": "^5.0.11",
     "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-splash-screen": "^3.1.1",
-    "react-native-swipeout": "^2.3.6",
+    "react-native-swipeout": "2.3.3",
     "react-native-web": "^0.9.13",
     "react-native-web-linear-gradient": "^1.0.5",
     "react-pdf": "^4.0.2",
