--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "android-uninstall": "adb uninstall com.actnursesportal"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "cors": "^2.8.5",
