--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "react-native-otp-inputs": "file:./modified_modules/react-native-otp-inputs",
     "react-native-pdf": "^5.0.11",
     "react-native-scrollable-tab-view": "^0.10.0",
+    "react-native-smooth-swipe-list": "^1.4.7",
     "react-native-splash-screen": "^3.1.1",
     "react-native-swipeout": "2.3.3",
+    "react-native-swipeview": "^1.0.3",
     "react-native-web": "^0.9.13",
     "react-native-web-linear-gradient": "^1.0.5",
     "react-pdf": "^4.0.2",
