--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "android-uninstall": "adb uninstall com.actnursesportal"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "cors": "^2.8.5",
@@ -72,10 +73,7 @@
     "react-native-pdf": "^5.0.11",
     "react-native-print": "^0.5.1",
     "react-native-scrollable-tab-view": "^0.10.0",
-    "react-native-smooth-swipe-list": "^1.4.7",
     "react-native-splash-screen": "^3.1.1",
-    "react-native-swipeout": "2.3.3",
-    "react-native-swipeview": "^1.0.3",
     "react-native-web": "^0.9.13",
     "react-native-web-linear-gradient": "^1.0.5",
     "react-pdf": "^4.0.2",
