--- a/ios/ActNursesportal/Info.plist
+++ b/ios/ActNursesportal/Info.plist
@@ -90,5 +90,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string> $(PRODUCT_NAME)  wants to use your camera to upload your profile picture to your account.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string> $(PRODUCT_NAME)  wants to use your photos to upload your profile picture to your account.</string>
 </dict>
 </plist>
