--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "react-mixin": "^5.0.0",
     "react-modal": "^3.8.1",
     "react-native": "0.55.4",
+    "react-native-custom-actionsheet": "^0.0.4",
     "react-native-geocoding": "^0.3.0",
+    "react-native-image-crop-picker": "^0.22.0",
     "react-native-interactable": "^0.1.10",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-linear-gradient": "^2.5.3",
