--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,6 +161,7 @@ configurations.all {
 
 
 dependencies {
+    implementation project(':react-native-firebase')
     implementation project(':react-native-image-crop-picker')
     implementation project(':react-native-print')
     implementation project(':react-native-interactable')
@@ -172,6 +173,9 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-navigation')
     implementation project(':react-native-linear-gradient')
+    implementation "com.google.android.gms:play-services-base:15.0.1"
+    implementation "com.google.firebase:firebase-messaging:17.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.1"
 }
 
 // Run this once to be able to run the application with BUCK
@@ -180,3 +184,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+apply plugin: 'com.google.gms.google-services'
