--- a/ios/ActNursesportal/Info.plist
+++ b/ios/ActNursesportal/Info.plist
@@ -39,8 +39,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string> $(PRODUCT_NAME)  wants to use your camera to upload your profile picture to your account.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string> $(PRODUCT_NAME)  wants to use your camera to upload your profile picture to your account.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string> $(PRODUCT_NAME)  wants to use your photos to upload your profile picture to your account.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Black.otf</string>
@@ -80,6 +86,10 @@
 		<string>MontserratAlternates-Light.otf</string>
 		<string>MontserratAlternates-SemiBold.otf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -90,9 +100,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSCameraUsageDescription</key>
-	<string> $(PRODUCT_NAME)  wants to use your camera to upload your profile picture to your account.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string> $(PRODUCT_NAME)  wants to use your photos to upload your profile picture to your account.</string>
 </dict>
 </plist>
