--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: "com.android.application"
+apply plugin: 'io.fabric'
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 
 import com.android.build.OutputFile
 
@@ -104,6 +108,7 @@ android {
         missingDimensionStrategy "RNN.reactNativeVersion", "reactNative55"
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -161,6 +166,7 @@ configurations.all {
 
 
 dependencies {
+    implementation project(':react-native-fabric')
     implementation project(':react-native-firebase')
     implementation project(':react-native-image-crop-picker')
     implementation project(':react-native-print')
@@ -176,6 +182,9 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:15.0.1"
     implementation "com.google.firebase:firebase-messaging:17.1.0"
     implementation "com.google.firebase:firebase-core:16.0.1"
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.9@aar') {
+        transitive = true;
+    }
 }
 
 // Run this once to be able to run the application with BUCK
