--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,10 +6,12 @@ buildscript {
         mavenLocal()
         mavenCentral()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'io.fabric.tools:gradle:1.+'
 
 
         // NOTE: Do not place your application dependencies here; they belong
