--- a/ios/ActNursesportal/Info.plist
+++ b/ios/ActNursesportal/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>3a0f4e0d383de26afee8c855c4e0a63e2117d206</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -42,7 +56,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string> $(PRODUCT_NAME)  wants to use your camera to upload your profile picture to your account.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string> $(PRODUCT_NAME)  wants to use your camera to upload your profile picture to your account.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
