--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,8 +5,11 @@ target 'ActNursesportal' do
 
 pod 'Firebase/Core'
 pod 'Firebase/Messaging'
+pod 'Fabric'
+pod 'Crashlytics'
 
 
+  pod 'ReactNativeFabric', :path => '../node_modules/react-native-fabric'
 
 end
 
