--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-modal": "^3.8.1",
     "react-native": "0.55.4",
     "react-native-custom-actionsheet": "^0.0.4",
+    "react-native-fabric": "^0.5.2",
     "react-native-firebase": "4.3.8",
     "react-native-geocoding": "^0.3.0",
     "react-native-image-crop-picker": "^0.22.0",
